fix: remove horizontal scroll on small resolutions

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,8 +44,9 @@ a:hover {
 /* ----------------------------------------- */
 
 .wrapper-mid {
-	width:969px;
-	margin:auto;
+	width:100%;
+	max-width:960px;
+	margin:0 auto;
 	background-repeat: repeat-y;
 	padding-bottom:40px;
 }
@@ -79,7 +80,7 @@ h1 span {
 }
 
 h1.name {
-	width:700px;
+	width:100%;
 }
 
 h2 {
@@ -207,7 +208,6 @@ img.portrait {
 /* ----------------------------------------- */
 
 .self {
-	width:250px;
 	float:left;
 	padding-top:11px;
 	margin-left:38px;
@@ -256,7 +256,7 @@ img.portrait {
 } */
 
 .footer {
-	width:969px;
+  width:100%;
   margin-left:40px;
   padding-top:40px;
   display: flex;
